--- a/css/content.css
+++ b/css/content.css
@@ -1,7 +1,20 @@
 @import url(style.css);
+@import url(curso_propiet.css);
 
-.container__content{
+
+.container__content {
   display: grid;
-  grid-template-columns:250px 1fr ;
+  grid-template-rows:auto;
+  grid-template-columns:250px 1fr 250px;
   background-color: var(--color__gris);
+  grid-template-areas: 
+  'sidebar main sidebar';
+  height: 900vh;
+  width: 100%;
+  gap: 10px;
+ 
+
+}
+.container{
+  padding: 10px;
 }
