--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 
 @import url(curso_propiet.css);
+@import url(content.css);
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 *{
   margin: 0;
@@ -8,7 +9,9 @@
 }
 body{
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   height: 100vh;
   background-color: var(--color_fondo);
   
@@ -19,12 +22,12 @@ body{
   width: 100%;
   height: 60px;
   display: flex;
-  /* align-items: center; */
-  justify-content: center;
+  padding: 0 10px;
+  justify-content:space-between ;
   gap: 8px;
-  
-
+  padding-top: 6px;
 }
+
 .header__logo-search{
   display: flex;
   align-items: center;
@@ -44,6 +47,7 @@ body{
   border-radius: 10px ;
   width: 100%;
   color: var(--color__negro);
+ 
 }
 .search__icono{
   
@@ -67,14 +71,31 @@ body{
   color:#91918F;
   padding: 30px;
   flex-direction: row;
-
+ 
+ 
 }
-.navegador__icons{
+.navegador__listas_icon{
   display: flex;
   justify-content: center;
   text-align: center;
   flex-direction: row;
   padding: 20px;
+  align-items: center;
+
+}
+.listas__icon{
+  display: flex;
+  text-align: center;
+  list-style: none;
+  gap:30px;
+
+ 
+}
+.lista_icon{
+  font-size: 1.5rem;
+  display: inline-block;
+  gap: 10px;
+  margin-top: 10px;
 }
 .icon{
   font-size: 25px;
@@ -82,6 +103,7 @@ body{
 }
 .icon__text{
   font-size: 1rem;
-  
+  text-align: center;
+
 }
 
